--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,6 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
-        "sensiolabs/security-checker": "^4.1",
         "symfony/dotenv": "^4.0",
         "symfony/profiler-pack": "^1.0",
         "symfony/web-server-bundle": "^4.0"
@@ -49,8 +48,7 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd",
-            "security-checker security:check": "script"
+            "assets:install --symlink --relative %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
